# FastFit

./: CMakeCache.txt  CMakeLists.txt  HelixParametrisation.ipynb  README.md  setup.py.in
PyFastFit/: FastFit.py
data/: D+:3.pickle  D+:5.pickle  D0:2.pickle  fastfit_basf2_data.py
example/: ApplicationToBelle2Data.py  PythonExample.py
files/: Belle2.patch
include/: FastFit.h.in  FastFit_C_API.h
src/: FastFit.cc  FastFit_C_API.cc  test_FastFit.cc
